Realiza conexão com o mongoDB
